# Database-Engine

./: CMakeLists.txt  DESIGN.md  README.md
benchmarks/macro/: bench_workload.cpp
benchmarks/micro/: bench_main.cpp  bench_utils.hpp
docs/modules/: catalog.md  executor.md  index.md  network_and_cli.md  parser.md  recovery.md  storage.md  transactions.md
src/buffer/: Iru_replacer.hpp  buffer_pool.cpp  buffer_pool.hpp  frame.hpp
src/catalog/: catalog_manager.cpp  catalog_manager.hpp  index_metadata.hpp  table_metadata.hpp
src/cli/: main.cpp  repl.cpp  repl.hpp
src/common/: schema.hpp  value.hpp
src/executor/: aggregate.hpp  executor.cpp  executor.hpp  expr_eval.cpp  expr_eval.hpp  filter.hpp
